--- a/attribute-manager-ui/package.json
+++ b/attribute-manager-ui/package.json
@@ -12,37 +12,32 @@
   },
   "private": true,
   "dependencies": {
-    "@advanced/mosaic-icons": "^1.2.13",
-    "@advanced/mosaic-styles": "^1.7.4",
-    "@advanced/mosaic-components": "./node_modules/@advanced/mosaic-components",
-    "@angular/animations": "~7.1.0",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
-    "@angular/forms": "~7.1.0",
-    "@angular/http": "^7.1.3",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
+    "@angular/animations": "~8.1.1",
+    "@angular/common": "~8.1.1",
+    "@angular/compiler": "~8.1.1",
+    "@angular/core": "~8.1.1",
+    "@angular/forms": "~8.1.1",
+    "@angular/platform-browser": "~8.1.1",
+    "@angular/platform-browser-dynamic": "~8.1.1",
+    "@angular/router": "~8.1.1",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/effects": "^6.1.2",
-    "@ngrx/store": "^6.1.2",
+    "@ngrx/effects": "^8.1.0",
+    "@ngrx/store": "^8.1.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "core-js": "^2.5.4",
+    "core-js": "^3.1.4",
     "immutable": "^4.0.0-rc.12",
-    "ng2-select": "^2.0.0",
-    "ngrx-store-localstorage": "^5.1.0",
-    "ngx-bootstrap": "^3.1.3",
-    "ngx-toastr": "^9.1.1",
+    "ngrx-store-localstorage": "^7.0.1",
+    "ngx-bootstrap": "^5.1.0",
+    "ngx-toastr": "^10.0.4",
     "ramda": "^0.26.1",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "rxjs": "~6.5.2",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "~7.1.2",
+    "@angular-devkit/build-angular": "~0.801.1",
+    "@angular/cli": "~8.1.1",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
     "@ngrx/schematics": "^6.1.2",
@@ -51,7 +46,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "@types/ramda": "^0.25.43",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
