--- a/attribute-manager-ui/package.json
+++ b/attribute-manager-ui/package.json
@@ -12,6 +12,9 @@
   },
   "private": true,
   "dependencies": {
+    "@advanced/mosaic-components": "^11.0.0",
+    "@advanced/mosaic-icons": "^1.5.0",
+    "@advanced/mosaic-styles": "^1.7.4",
     "@angular/animations": "~8.1.1",
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
